# algo-trading

./: .gitignore  DEPLOYMENT.md  OAUTH_SETUP.md  README.md  docker-compose.yml  package-lock.json  start.bat
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.old  Dockerfile  README.md  Testwebsocket.py  debug_session.py  env.example  main.py  main_old.py  pyproject.toml  requirements.txt  socket-test.py  test.py
backend/api/routes/: account.py  auth.py  health.py  market_data.py  orders.py  portfolio.py
backend/config/: settings.py
backend/core/: dependencies.bak  dependencies.py  exceptions.py  logging.py
backend/models/: schemas.py
backend/services/: auth_service.py  flattrade_client.py  flattrade_client_old.py  health_service.py  portfolio_service.py  websocket_service.py
backend/utils/: constants.py  decorators.py  helpers.py  validators.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css
frontend/src/components/: Account.js  AdvancedChart.js  BulletproofChart.js  Callback.js  ChartDataDebugger.js  ChartErrorBoundary.js  ChartErrorBoundary_003.js  ContainerMountTest.js  Dashboard.js  DataInspector.js  EnhancedTradingChart.js  EnhancedTradingChart_2oct.js  FixedTradingChart.js  HoldingsChart.js  IndicatorControls.js  IndicatorPanel.js  Login.js  Navbar.js  Orders.js  PnLChart.js  Portfolio.js  Portfolio.js.bak  PortfolioChart.js  PresetStrategies.js  RefTestComponent.js  SimpleTradingChart.js  Trading.js  TradingChart.js  (+7 more)
(+4 files in other folders)
